# backend/doc/ToDoListOpenApi.json
@@ -1,188 +1,207 @@
 {
- "openapi": "3.0.2",
- "info": {
-  "title": "ToDo List API",
-  "version": "1.0"
- },
- "servers": [
-  {
-   "url": "https://localhost:8080/api"
-  }
- ],
- "paths": {
-  "/tasks": {
-   "post": {
-    "summary": "Add a new task",
-    "requestBody": {
-     "required": true,
-     "content": {
-      "application/json": {
-       "schema": {
-        "type": "object",
-        "properties": {
-         "taskName": {
-          "type": "string"
-         },
-         "dueDate": {
-          "type": "string",
-          "format": "date-time"
-         },
-         "description": {
-          "type": "string"
-         }
-        },
-        "required": ["taskName", "dueDate"]
-       }
-      }
-     }
-    },
-    "responses": {
-     "201": {
-      "description": "Task added successfully",
-      "content": {
-       "application/json": {
-        "schema": {
-         "$ref": "#/components/schemas/TaskQuery"
-        }
-       }
-      }
-     },
-     "400": {
-      "description": "Task cannot be created"
-     }
-    }
-   }
+  "openapi": "3.0.2",
+  "info": {
+    "title": "ToDo List API",
+    "version": "1.0"
   },
-  "/tasks/{id}": {
-   "get": {
-    "summary": "Get a task by ID",
-    "parameters": [
-     {
-      "name": "id",
-      "in": "path",
-      "required": true,
-      "schema": {
-       "type": "integer"
-      }
-     }
-    ],
-    "responses": {
-     "200": {
-      "description": "Task retrieved successfully",
-      "content": {
-       "application/json": {
-        "schema": {
-         "$ref": "#/components/schemas/TaskQuery"
-        }
-       }
-      }
-     },
-     "404": {
-      "description": "Task not found"
-     }
+  "servers": [
+    {
+      "url": "https://localhost:8080/api"
     }
-   },
-   "put": {
-    "summary": "Edit a task",
-    "parameters": [
-     {
-      "name": "id",
-      "in": "path",
-      "required": true,
-      "schema": {
-       "type": "integer"
+  ],
+  "paths": {
+    "/tasks": {
+      "post": {
+        "summary": "Add a new task",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "taskName": {
+                    "type": "string"
+                  },
+                  "dueDate": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                },
+                "required": ["taskName", "dueDate"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Task added successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskQuery"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Task cannot be created"
+          }
+        }
+      },
+      "get": {
+        "summary": "Get all tasks",
+        "operationId": "getAllTasks",
+        "responses": {
+          "200": {
+            "description": "A list of tasks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TaskQuery"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
-     }
-    ],
-    "requestBody": {
-     "required": true,
-     "content": {
-      "application/json": {
-       "schema": {
+    },
+    "/tasks/{id}": {
+      "get": {
+        "summary": "Get a task by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Task retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskQuery"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      },
+      "put": {
+        "summary": "Edit a task",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "taskName": {
+                    "type": "string"
+                  },
+                  "dueDate": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "status": {
+                    "type": "string",
+                    "enum": ["CREATED", "IN_PROGRESS", "DONE"]
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Task edited successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskQuery"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Remove a task",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Task removed successfully"
+          },
+          "404": {
+            "description": "Task not found"
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "TaskQuery": {
         "type": "object",
         "properties": {
-         "taskName": {
-          "type": "string"
-         },
-         "dueDate": {
-          "type": "string",
-          "format": "date-time"
-         },
-         "status": {
-          "type": "string",
-          "enum": ["CREATED", "IN_PROGRESS", "DONE"]
-         },
-         "description": {
-          "type": "string"
-         }
+          "id": {
+            "type": "integer"
+          },
+          "taskName": {
+            "type": "string"
+          },
+          "dueDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "status": {
+            "type": "string",
+            "enum": ["CREATED", "IN_PROGRESS", "DONE"]
+          },
+          "description": {
+            "type": "string"
+          }
         }
-       }
       }
-     }
-    },
-    "responses": {
-     "200": {
-      "description": "Task edited successfully",
-      "content": {
-       "application/json": {
-        "schema": {
-         "$ref": "#/components/schemas/TaskQuery"
-        }
-       }
-      }
-     },
-     "404": {
-      "description": "Task not found"
-     }
     }
-   },
-   "delete": {
-    "summary": "Remove a task",
-    "parameters": [
-     {
-      "name": "id",
-      "in": "path",
-      "required": true,
-      "schema": {
-       "type": "integer"
-      }
-     }
-    ],
-    "responses": {
-     "204": {
-      "description": "Task removed successfully"
-     },
-     "404": {
-      "description": "Task not found"
-     }
-    }
-   }
   }
- },
- "components": {
-  "schemas": {
-   "TaskQuery": {
-    "type": "object",
-    "properties": {
-     "id": {
-      "type": "integer"
-     },
-     "taskName": {
-      "type": "string"
-     },
-     "dueDate": {
-      "type": "string",
-      "format": "date-time"
-     },
-     "status": {
-      "type": "string",
-      "enum": ["CREATED", "IN_PROGRESS", "DONE"]
-     },
-     "description": {
-      "type": "string"
-     }
-    }
-   }
-  }
- }
 }
